# imageprocessing

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CreateHistgram.cpp  DetectFeature.hpp  FindFeature.hpp  GetImage.hpp  Main  Makefile  MatchingFeature.hpp  cmake_install.cmake  gnuplot.h  image.cpp  main.cpp  movie.cpp  note.txt  project1.cpp
src/: FindDifferences.hpp  GetImage.hpp  MatchingFeature.hpp  main.cpp
